fixed send button and text area on mobile

--- a/src/Pages/Contact.css
+++ b/src/Pages/Contact.css
@@ -256,9 +256,7 @@ hr {
 }
 
 @media (max-width: 610px) {
-  .send-button {
-    width: 99%;
-  }
+
   .heading-container {
     padding-left: 8.2% !important;
     margin-top: 30px;
@@ -266,6 +264,9 @@ hr {
   .contact-list {
     width: 500px !important;
     margin-left: -80px;
+  }
+  .form-horizontal {
+    width: 100%;
   }
 }
 
